2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Avoid ?: construct without the middle term.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c, src/usermod.c, lib/prototypes.h: The uid and
	gid parameters can be set to -1 to indicate that the original
	owners must be kept. Change the types from uid_t/gid_t to a
	long int (signed).
	* libmisc/copydir.c: Change the copy_entry(), copy_dir(),
	copy_symlink(), copy_special(), and copy_file() prototypes
	accordingly.
	* lib/prototypes.h: Add the parameters' name for the
	libmisc/copydir.c functions.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c, libmisc/obscure.c, src/login_nopam.c,
	lib/pwauth.c: Avoid empty file when USE_PAM is set.
	* libmisc/audit_help.c: Avoid empty file when WITH_AUDIT is not set.
	* src/login_nopam.c: Fix warnings: resolve_hostname takes and
	returns a constant string.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Split process_flags(), open_files(), and
	close_files() out of main(). New global variables is_shadow,
	sort_mode, use_system_grp_file, and use_system_sgr_file.
	* src/grpck.c: Split check_grp_file() and check_sgr_file() out of
	main().
	* src/grpck.c: Split check_members() and compare_members_lists()
	out of check_grp_file() and check_sgr_file().

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/Makefile.in.in: If remove-potcdate.sin does not exist,
	use the one from teh po directory (it is not installed
	automatically by autopoint.

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.h: Fix the type of the bitfields in the commonio_entry
	and commonio_db structures to unsigned int (instead of int).

2007-12-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: Split process_flags(), check_perms(), and update_shell()
	out of main().