@@ -1,5 +1,12 @@
 2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/lastlog.c: Remove statbuf, not used.
+	* src/lastlog.c: Fix types, cast umin and umax to uid_t.
+	* src/lastlog.c: (option -u) user needs to be a signed long, not
+	uid_t (to accept rangees like -<uid>
+
+2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/useradd.c: Avoid ?: construct without the middle term.
 
 2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>
